--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.apiman.qa</groupId>
   <artifactId>apiman-integration-tests</artifactId>
@@ -37,8 +36,8 @@
     <version.jackson>2.6.3</version.jackson>
     <version.jacoco>0.7.5.201505241946</version.jacoco>
     <!-- Build influencing properties -->
-    <groups></groups>
-    <groups.exclude></groups.exclude>
+    <groups/>
+    <groups.exclude/>
     <skipCoverage>false</skipCoverage>
     <!-- in seconds -->
   </properties>
@@ -168,5 +167,31 @@
         </plugin>
       </plugins>
     </pluginManagement>
+  
+    <plugins>
+      <plugin>
+        <groupId>io.fabric8</groupId>
+        <artifactId>fabric8-maven-plugin</artifactId>
+        <version>3.5.28</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>resource</goal>
+              <goal>build</goal>
+            </goals>
+          </execution>
+        </executions>
+      
+        <configuration>
+          <resources>
+            <labels>
+              <all>
+                <space>testfeb231519391840595</space>
+              </all>
+            </labels>
+          </resources>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
